@@ -1,3 +1,7 @@
+* 2014-04-24 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 31970: Always close LDAP naming enumerations  
+
 * 2014-04-24 - martin.herfurth@open-xchange.com
 
  - Fix for bug 31963: Conflict handling for full time appointments.
